<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 by Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/action_hash"
            android:title="@string/tab_title_hash_function" />
        <item
            android:id="@+id/action_codec_file"
            android:title="@string/tab_title_file" />
        <item
            android:id="@+id/action_base_converter"
            android:title="@string/tab_title_base" />
    </group>

    <item android:title="@string/title_menu_cipher">
        <menu>
            <item
                android:id="@+id/action_caesar_cipher"
                android:title="@string/title_menu_caesar_cipher" />
            <item
                android:id="@+id/action_frequency_analysis"
                android:title="@string/title_frequency_analysis" />
            <item
                android:id="@+id/action_vigenere_cipher"
                android:title="@string/title_vigenere_cipher" />
        </menu>
    </item>

    <item android:title="Floating">
        <menu>
            <item
                android:id="@+id/action_open_codec"
                android:title="@string/action_open_floating_codec" />
            <item
                android:id="@+id/action_open_stylish"
                android:title="@string/action_floating_stylish" />
        </menu>
    </item>

    <item android:title="@string/title_menu_more_app">
        <menu>
            <item
                android:id="@+id/action_install_text_editor"
                android:title="@string/title_menu_text_editor" />
            <item
                android:id="@+id/action_install_ascii_art"
                android:title="@string/title_menu_ascii_art" />
        </menu>
    </item>
</menu>