<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 by Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_upgrade"
        android:icon="@drawable/ic_lock_open_white_24dp"
        android:title="@string/action_upgrade"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_how_to_use"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/action_how_to_use"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share_this_app" />
    <item
        android:id="@+id/action_open_codec"
        android:title="@string/action_open_floating_codec"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_stylish"
        android:title="@string/action_floating_stylish"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_review"
        android:icon="@drawable/ic_rate_review_white_24dp"
        android:title="@string/action_rate" />

</menu>