<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 by Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rippleBackground"
            android:contentDescription="@string/action_copy"
            android:padding="8dp"
            android:src="@drawable/ic_content_copy_white_24dp"
            android:tint="?imageTintColor" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_paste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rippleBackground"
            android:contentDescription="@string/action_paste"
            android:padding="8dp"
            android:src="@drawable/ic_content_paste_white_24dp"
            android:tint="?imageTintColor" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rippleBackground"
            android:contentDescription="@string/action_share_text"
            android:padding="8dp"
            android:src="@drawable/ic_share_white_24dp"
            android:tint="?imageTintColor" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rippleBackground"
            android:contentDescription="@string/action_clear_all"
            android:padding="8dp"
            android:src="@drawable/ic_clear_black_24dp"
            android:tint="?imageTintColor" />

    </LinearLayout>
</ScrollView>