<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2017-2018 Tran Le Duy
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_binary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:maxLines="1"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_octal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_octal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:maxLines="1"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_decimal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_decimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:maxLines="1"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hex">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_hex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <include
        layout="@layout/keypad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>