<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C)  2017-2018 Tran Le Duy
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <include
            android:id="@+id/edit_menu_input"
            layout="@layout/edit_menu" />

        <com.duy.text.converter.view.RoundedBackgroundEditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?roundBackground"
            android:gravity="top"
            android:hint="@string/hint_encode_here"
            android:inputType="textMultiLine"
            android:padding="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_encode"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/process_text_title_encode_it" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decode"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="?colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btn_decode_cam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?rippleBackground"
                app:cardBackgroundColor="?cardBackgroundColor"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_camera_alt_white_48dp"
                        android:text="@string/decode"
                        android:tint="?imageTintColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/using_camera"
                        android:textColor="?android:textColorPrimary" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_decode_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?rippleBackground"
                app:cardBackgroundColor="?cardBackgroundColor"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_collections_white_48dp"
                        android:text="Decode"
                        android:tint="?imageTintColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select From Gallery"
                        android:textColor="?android:textColorPrimary" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
